@@ -1,81 +1,70 @@
 package org.polyfrost.chattweaks.features;
 
+import com.mojang.blaze3d.platform.NativeImage;
+import com.mojang.blaze3d.platform.Window;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.ScaledResolution;
-import net.minecraft.client.renderer.GlStateManager;
-import net.minecraft.client.renderer.Tessellator;
-import net.minecraft.client.renderer.WorldRenderer;
+//? if <26.1 {
+import net.minecraft.client.gui.GuiGraphics;
+//?}
 import net.minecraft.client.renderer.texture.DynamicTexture;
-import net.minecraft.client.renderer.texture.TextureUtil;
-import net.minecraft.client.renderer.vertex.DefaultVertexFormats;
-import net.minecraft.event.ClickEvent;
-import net.minecraft.util.ChatStyle;
-import net.minecraft.util.IChatComponent;
-import org.apache.commons.io.IOUtils;
-import org.lwjgl.input.Keyboard;
-import org.lwjgl.input.Mouse;
-import org.lwjgl.opengl.GL11;
+import net.minecraft.resources.ResourceLocation;
+import org.lwjgl.glfw.GLFW;
 import org.polyfrost.chattweaks.ChatTweaks;
-import org.polyfrost.oneconfig.api.event.v1.events.RenderEvent;
-import org.polyfrost.oneconfig.api.event.v1.invoke.impl.Subscribe;
+import org.polyfrost.chattweaks.util.ChatCompat;
+import org.polyfrost.chattweaks.util.HoveredUrl;
 
-import java.awt.image.BufferedImage;
+import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.concurrent.CompletableFuture;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-public class ImagePreview {
-    private final Pattern OGP_IMAGE_REGEX = Pattern.compile("<meta property=\"(?:og:image|twitter:image)\" content=\"(?<url>.+?)\".*?/?>");
-    private final Pattern IMG_TAG_REGEX = Pattern.compile("<img.*?src=\"(?<url>.+?)\".*?>");
+public final class ImagePreview {
+    private static final Pattern OGP_IMAGE_REGEX =
+            Pattern.compile("<meta property=\"(?:og:image|twitter:image)\" content=\"(?<url>.+?)\".*?/?>");
+    private static final Pattern IMG_TAG_REGEX = Pattern.compile("<img.*?src=\"(?<url>.+?)\".*?>");
 
-    private final Minecraft mc = Minecraft.getMinecraft();
-    private BufferedImage image;
-    private String loaded;
+    private static volatile NativeImage pendingImage;
+    private static String loaded;
+    private static ResourceLocation texture;
+    private static int imageWidth = 100;
+    private static int imageHeight = 100;
 
-    private int tex = -1;
-    private int width = 100;
-    private int height = 100;
-
-    @Subscribe
-    public void renderTickEvent(RenderEvent.Post event) {
-        if (!ChatTweaks.config.imagePreview) return;
-        final IChatComponent chatComponent = mc.ingameGUI.getChatGUI().getChatComponent(Mouse.getX(), Mouse.getY());
-        if (chatComponent != null) {
-            final ChatStyle chatStyle = chatComponent.getChatStyle();
-            final ClickEvent chatClickEvent = chatStyle.getChatClickEvent();
-            if (chatStyle.getChatClickEvent() != null && chatClickEvent.getAction() == ClickEvent.Action.OPEN_URL) {
-                handle(chatClickEvent.getValue());
-            }
-        }
+    //? if >=26.1 {
+    /*public static void render(net.minecraft.client.gui.GuiGraphicsExtractor graphics) {
+        // unavailable on 26.x
     }
+    *///?} elif >=1.21.11 {
+    /*public static void render(GuiGraphics graphics) {
+        // unavailable on 1.21.11 (chat hit-testing removed)
+    }
+    *///?} else {
+    public static void render(GuiGraphics graphics) {
+        if (!ChatTweaks.config.imagePreview) {
+            return;
+        }
+        Minecraft mc = Minecraft.getInstance();
+        Window window = mc.getWindow();
+        double mouseX = mc.mouseHandler.xpos() * window.getGuiScaledWidth() / Math.max(1, window.getScreenWidth());
+        double mouseY = mc.mouseHandler.ypos() * window.getGuiScaledHeight() / Math.max(1, window.getScreenHeight());
 
-    private void handle(String value) {
-        //if (Patcher.instance.isEssential()) {
-        //    try {
-        //        final URL url = new URL(value);
-        //        final String host = url.getHost();
-        //        boolean found = false;
-        //        for (TrustedHostsUtil.TrustedHost trustedHost : EssentialAPI.getTrustedHostsUtil().getTrustedHosts()) {
-        //            for (String domain : trustedHost.getDomains()) {
-        //                if (host.equalsIgnoreCase(domain)) {
-        //                    found = true;
-        //                    break;
-        //                }
-        //            }
-        //        }
-        //        if (!found) return;
-        //    } catch (MalformedURLException e) {
-        //        //Patcher.instance.getLogger().error("Error during url lookup: " + value, e);
-        //        return;
-        //    }
-        //}
+        String url = ((HoveredUrl) mc.gui.getChat()).chattweaks$hoveredUrl(mouseX, mouseY);
+        if (url == null) {
+            return;
+        }
+        handle(mc, graphics, url);
+    }
+    //?}
 
+    //? if <26.1 {
+    private static void handle(Minecraft mc, GuiGraphics graphics, String value) {
         if (!value.startsWith("http")) {
-            if (tex != -1) GlStateManager.deleteTexture(tex);
-            tex = -1;
+            releaseTexture(mc);
             return;
         }
 
@@ -86,84 +75,84 @@ public class ImagePreview {
 
         if (!value.equals(loaded)) {
             loaded = value;
-
-            if (tex != -1) GlStateManager.deleteTexture(tex);
-
-            tex = -1;
-            String finalValue = value;
+            releaseTexture(mc);
+            pendingImage = null;
+            final String finalValue = value;
             CompletableFuture.runAsync(() -> loadUrl(finalValue));
         }
 
-        if (this.image != null) {
-            final DynamicTexture dynamicTexture = new DynamicTexture(image);
-            GL11.glTexParameteri(GL11.GL_TEXTURE_2D, GL11.GL_TEXTURE_MAG_FILTER, GL11.GL_NEAREST);
-            dynamicTexture.updateDynamicTexture();
-            this.tex = dynamicTexture.getGlTextureId();
-            this.width = image.getWidth();
-            this.height = image.getHeight();
-            this.image = null;
+        NativeImage image = pendingImage;
+        if (image != null) {
+            pendingImage = null;
+            //? if >=1.21.5 {
+            /*DynamicTexture dynamicTexture = new DynamicTexture(() -> "chattweaks/preview", image);
+            *///?} else {
+            DynamicTexture dynamicTexture = new DynamicTexture(image);
+            //?}
+            texture = ResourceLocation.fromNamespaceAndPath("chattweaks", "preview");
+            mc.getTextureManager().register(texture, dynamicTexture);
+            imageWidth = image.getWidth();
+            imageHeight = image.getHeight();
         }
 
-        if (tex != -1) {
-            GlStateManager.pushMatrix();
-            final ScaledResolution scaledResolution = new ScaledResolution(mc);
-            final int scaleFactor = scaledResolution.getScaleFactor();
-            final float i = 1 / ((float) scaleFactor);
-            GlStateManager.scale(i, i, i);
-            GlStateManager.enableTexture2D();
-            GlStateManager.bindTexture(tex);
-            GlStateManager.color(1, 1, 1, 1);
-            float aspectRatio = width / (float) height;
-            float scaleWidth = scaledResolution.getScaledWidth() * scaleFactor;
+        if (texture == null) {
+            return;
+        }
 
-            if (!Keyboard.isKeyDown(Keyboard.KEY_LSHIFT)) scaleWidth *= ChatTweaks.config.imagePreviewWidth;
-            if (Keyboard.isKeyDown(Keyboard.KEY_LCONTROL)) scaleWidth = this.width;
+        Window window = mc.getWindow();
+        int guiWidth = window.getGuiScaledWidth();
+        int guiHeight = window.getGuiScaledHeight();
+        float aspectRatio = imageWidth / (float) imageHeight;
 
-            float maxWidth = scaleWidth;
-            float height = maxWidth / aspectRatio;
+        float drawWidth = guiWidth * ChatTweaks.config.imagePreviewWidth;
+        if (ChatCompat.isKeyDown(GLFW.GLFW_KEY_LEFT_SHIFT)) {
+            drawWidth = guiWidth;
+        }
+        if (ChatCompat.isKeyDown(GLFW.GLFW_KEY_LEFT_CONTROL)) {
+            drawWidth = imageWidth;
+        }
+        float drawHeight = drawWidth / aspectRatio;
+        if (drawHeight > guiHeight) {
+            drawHeight = guiHeight;
+            drawWidth = drawHeight * aspectRatio;
+        }
 
-            if (height > scaledResolution.getScaledHeight() * scaleFactor) {
-                height = scaledResolution.getScaledHeight() * scaleFactor;
-                maxWidth = height * aspectRatio;
-            }
+        //? if >=1.21.8 {
+        /*graphics.blit(net.minecraft.client.renderer.RenderPipelines.GUI_TEXTURED, texture, 0, 0, 0F, 0F, (int) drawWidth, (int) drawHeight, imageWidth, imageHeight, imageWidth, imageHeight);
+        *///?} elif >=1.21.4 {
+        /*graphics.blit(net.minecraft.client.renderer.RenderType::guiTextured, texture, 0, 0, 0F, 0F, (int) drawWidth, (int) drawHeight, imageWidth, imageHeight, imageWidth, imageHeight);
+        *///?} else {
+        graphics.blit(texture, 0, 0, (int) drawWidth, (int) drawHeight, 0F, 0F, imageWidth, imageHeight, imageWidth, imageHeight);
+        //?}
+    }
+    //?}
 
-            GL11.glTexParameteri(GL11.GL_TEXTURE_2D, GL11.GL_TEXTURE_MAG_FILTER, GL11.GL_NEAREST);
-            drawTexturedModalRect(0, 0, (int) maxWidth, (int) height);
-            GlStateManager.popMatrix();
+    private static void releaseTexture(Minecraft mc) {
+        if (texture != null) {
+            mc.getTextureManager().release(texture);
+            texture = null;
         }
     }
 
-    public void drawTexturedModalRect(int x, int y, int width, int height) {
-        Tessellator tessellator = Tessellator.getInstance();
-        WorldRenderer worldrenderer = tessellator.getWorldRenderer();
-        worldrenderer.begin(GL11.GL_QUADS, DefaultVertexFormats.POSITION_TEX_COLOR);
-        worldrenderer.pos(x, y + height, 0).tex(0, 1).color(255, 255, 255, 255).endVertex();
-        worldrenderer.pos(x + width, y + height, 0).tex(1, 1).color(255, 255, 255, 255).endVertex();
-        worldrenderer.pos(x + width, y, 0).tex(1, 0).color(255, 255, 255, 255).endVertex();
-        worldrenderer.pos(x, y, 0).tex(0, 0).color(255, 255, 255, 255).endVertex();
-        tessellator.draw();
-    }
-
-    private void loadUrl(String url) {
+    private static void loadUrl(String url) {
         HttpURLConnection connection = null;
         try {
-            URL u = new URL(url);
+            URL u = new URI(url).toURL();
             connection = (HttpURLConnection) u.openConnection();
             connection.setRequestMethod("GET");
             connection.setUseCaches(true);
             connection.setInstanceFollowRedirects(true);
-            connection.addRequestProperty("User-Agent", "PolyPatcher Image Previewer");
+            connection.addRequestProperty("User-Agent", "ChatTweaks Image Previewer");
             if (url.contains("imgur")) {
-                // Prevents redirect to main website
                 connection.addRequestProperty("Referer", "https://imgur.com/");
             }
             connection.setReadTimeout(15000);
             connection.setConnectTimeout(15000);
-            connection.setDoOutput(true);
 
             try (InputStream stream = connection.getInputStream()) {
-                if (connection.getHeaderField("Content-Type").contains("text/html")) {
-                    String body = IOUtils.toString(stream);
+                String contentType = connection.getHeaderField("Content-Type");
+                if (contentType != null && contentType.contains("text/html")) {
+                    String body = new String(stream.readAllBytes(), StandardCharsets.UTF_8);
                     String imageURL = "";
                     Matcher matcher;
                     if ((matcher = OGP_IMAGE_REGEX.matcher(body)).find()) {
@@ -172,23 +161,24 @@ public class ImagePreview {
                         imageURL = matcher.group("url");
                     }
                     if (imageURL.startsWith("/")) {
-                        URL urlObj = new URL(url);
+                        URL urlObj = new URI(url).toURL();
                         imageURL = urlObj.getProtocol() + "://" + urlObj.getHost() + imageURL;
                     }
 
                     if (!imageURL.isEmpty()) {
-                        loadUrl(imageURL);
                         connection.disconnect();
+                        loadUrl(imageURL);
                         return;
                     }
                 }
 
-                image = TextureUtil.readBufferedImage(stream);
+                pendingImage = NativeImage.read(stream);
             }
-        } catch (Exception e) {
-            //Patcher.instance.getLogger().error("Failed to load an image preview from {}", url, e);
+        } catch (IOException | URISyntaxException ignored) {
         } finally {
-            if (connection != null) connection.disconnect();
+            if (connection != null) {
+                connection.disconnect();
+            }
         }
     }
 }
